# velocityper

./: .gitignore  LICENSE  Makefile.am  README.rst  configure.ac  makefile.bsd  velocityper.pc.in  velocityper.spec.in  warnings.mk
src/: Makefile.am  Makefile.in  velocityper.1  velocityper.c
tests/: Makefile.am  Makefile.in  test-01.vt  test-02.vt  test-03.vt  test-04.vt
